--- a/style/style.css
+++ b/style/style.css
@@ -4,6 +4,7 @@
 }
 
 body{
+	background-color: #eee;
 	margin: 0;
 	padding: 0;
 }
@@ -27,4 +28,15 @@ hr{
 	background-color: #005578;
 	width: 100vw;
 	max-width: 100vw;
+}
+
+.text{
+	text-align: justify;
+	margin: 1rem;
+	max-width: 50vw;
+}
+
+h3{
+	color: #005577;
+	margin: 1rem
 }
