--- a/style/style.css
+++ b/style/style.css
@@ -18,7 +18,7 @@ body{
 
 .name{
 	font-size: 1.5rem;
-	margin: .5rem .5rem .1rem .5rem;
+	margin: .5rem 1.5rem .1rem 10rem;
 	font-weight: bold;
 }
 
@@ -31,11 +31,28 @@ hr{
 
 .text{
 	text-align: justify;
-	margin: 1rem;
+	margin: .5rem 1.5rem .1rem 10rem;
 	max-width: 50vw;
+	font-size: 1rem;
 }
 
-h3{
+h2{
 	color: #005577;
-	margin: 1rem
+	margin: .5rem 1.5rem .9rem 10rem;
+}
+
+.links{
+  background-color: #005577;
+  font-weight: bold;
+  padding: 0.3em;
+  border-bottom: 2px solid black;
+  font-size: 91%;
+  display: flex;
+  justify-content: space-between;
+  margin: .5rem 0rem .0rem 0rem;
+}
+.links a{
+	color: #fff;
+	text-decoration: none;
+	margin: 0rem 0rem 0rem 10rem;
 }
