--- a/style/style.css
+++ b/style/style.css
@@ -1,9 +1,11 @@
 *{
+	overflow-x: hidden;
 	font-family: sans-serif;
 	box-sizing: border-box;
 }
 
 body{
+
 	background-color: #eee;
 	margin: 0;
 	padding: 0;
@@ -42,17 +44,15 @@ h2{
 }
 
 .links{
-  background-color: #005577;
-  font-weight: bold;
-  padding: 0.3em;
-  border-bottom: 2px solid black;
-  font-size: 91%;
-  display: flex;
-  justify-content: space-between;
-  margin: .5rem 0rem .0rem 0rem;
+  	margin: 0 -9999rem;
+  	padding: 0.25rem 9999rem;
+  	background: #005577;
 }
 .links a{
-	color: #fff;
+	padding: 0.5ex 1ex;
 	text-decoration: none;
-	margin: 0rem 0rem 0rem 10rem;
+  	vertical-align: baseline;
+  	font-size: .9rem;
+  	color: #fff;
+	font-weight: bold;
 }
