--- a/style/style.css
+++ b/style/style.css
@@ -6,7 +6,7 @@
 
 body{
 
-	background-color: #eee;
+	background-color: #EEEEEE;
 	margin: 0;
 	padding: 0;
 }
@@ -20,7 +20,7 @@ body{
 
 .name{
 	font-size: 1.5rem;
-	margin: .5rem 1.5rem .1rem 10rem;
+	margin: .5rem 1.5rem .1rem 11rem;
 	font-weight: bold;
 }
 
@@ -29,30 +29,61 @@ hr{
 	background-color: #005578;
 	width: 100vw;
 	max-width: 100vw;
+	padding-bottom: 0;
+	margin-bottom: 0;
 }
 
 .text{
+	color: #454545;
 	text-align: justify;
-	margin: .5rem 1.5rem .1rem 10rem;
+	margin: .5rem 1rem .1rem 11rem;
 	max-width: 50vw;
 	font-size: 1rem;
 }
 
 h2{
 	color: #005577;
-	margin: .5rem 1.5rem .9rem 10rem;
+	margin: .5rem 1.5rem .9rem 11rem;
+
 }
 
 .links{
   	margin: 0 -9999rem;
   	padding: 0.25rem 9999rem;
   	background: #005577;
+	color: #fff;
 }
 .links a{
-	padding: 0.5ex 1ex;
+	padding: 0.5rem 0.25rem;
 	text-decoration: none;
   	vertical-align: baseline;
   	font-size: .9rem;
   	color: #fff;
 	font-weight: bold;
+}
+
+
+.sidebar {
+	position: fixed;
+	width: 7.8vw;
+	height: 100vh;
+	border-right: 1px dotted #005577;
+	border-bottom: 1px dotted #005577;
+	
+}
+
+
+.sidebar a:hover{
+	color: #838C91;
+}
+
+
+.sidebar a{
+	color: #454545;
+	position: fixed;
+	font-weight: bold;
+}
+
+a:visited{
+	text-decoration: none;
 }
