--- a/style/style.css
+++ b/style/style.css
@@ -20,7 +20,7 @@ body{
 
 .name{
 	font-size: 1.5rem;
-	margin: .5rem 1.5rem .1rem 11rem;
+	margin: .5rem 1.5rem .1rem 12rem;
 	font-weight: bold;
 }
 
@@ -36,16 +36,24 @@ hr{
 .text{
 	color: #454545;
 	text-align: justify;
-	margin: .5rem 1rem .1rem 11rem;
+	margin: .5rem 1rem .1rem 12rem;
 	max-width: 50vw;
 	font-size: 1rem;
 }
 
 h2{
 	color: #005577;
-	margin: .5rem 1.5rem .9rem 11rem;
+	margin: .5rem 1.5rem .9rem 12rem;
 
 }
+
+h3{
+	color: #005577;
+	margin: .5rem 1.5rem .9rem 12rem;
+
+}
+
+
 
 .links{
   	margin: 0 -9999rem;
@@ -63,13 +71,13 @@ h2{
 }
 
 .list{
-	margin: .5rem 1.5rem .9rem 11rem;
+	margin: .5rem 1.5rem .9rem 12rem;
 }
 
 
 .sidebar {
 	position: fixed;
-	width: 7.8vw;
+	width: 9vw;
 	height: 100vh;
 	border-right: 1px dotted #005577;
 	border-bottom: 1px dotted #005577;
