--- a/style/style.css
+++ b/style/style.css
@@ -1,101 +1,27 @@
 *{
-	overflow-x: hidden;
-	font-family: sans-serif;
-	box-sizing: border-box;
-}
-
-body{
-
-	background-color: #EEEEEE;
-	margin: 0;
-	padding: 0;
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    font-family: sans-serif;
 }
 
 .navbar{
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	color: #005577;
+    color: #069;
+    display: flex;
+    align-items: center;
 }
 
-.name{
-	font-size: 1.5rem;
-	margin: .5rem 1.5rem .1rem 12rem;
-	font-weight: bold;
-}
-
-hr{
-	height: .4rem;
-	background-color: #005578;
-	width: 100vw;
-	max-width: 100vw;
-	padding-bottom: 0;
-	margin-bottom: 0;
+.title{
+    font-size: 1.5rem;
+    margin: .5rem
 }
 
 .text{
-	color: #454545;
-	text-align: justify;
-	margin: .5rem 1rem .1rem 12rem;
-	max-width: 50vw;
-	font-size: 1rem;
+    margin: auto;
+    width: 50%;
+    padding: 10px;
 }
 
-h2{
-	color: #005577;
-	margin: .5rem 1.5rem .9rem 12rem;
-
-}
-
-h3{
-	color: #005577;
-	margin: .5rem 1.5rem .9rem 12rem;
-
-}
-
-
-
-.links{
-  	margin: 0 -9999rem;
-  	padding: 0.25rem 9999rem;
-  	background: #005577;
-	color: #fff;
-}
-.links a{
-	padding: 0.5rem 0.25rem;
-	text-decoration: none;
-  	vertical-align: baseline;
-  	font-size: .9rem;
-  	color: #fff;
-	font-weight: bold;
-}
-
-.list{
-	margin: .5rem 1.5rem .9rem 12rem;
-}
-
-
-.sidebar {
-	position: fixed;
-	width: 9vw;
-	height: 100vh;
-	border-right: 1px dotted #005577;
-	border-bottom: 1px dotted #005577;
-	
-}
-
-
-.sidebar a:hover{
-	color: #838C91;
-}
-
-
-.sidebar a{
-	color: #454545;
-	position: fixed;
-	font-weight: bold;
-}
-
-a:visited{
-	text-decoration: none;
+h1{
+    color: #069;
 }
