--- a/style/style.css
+++ b/style/style.css
@@ -6,9 +6,11 @@
 }
 
 .navbar{
-    color: #069;
+    color: #fff;
+    background-color: #069;
     display: flex;
     align-items: center;
+    height: 5vh;
 }
 
 .title{
@@ -20,6 +22,7 @@
     margin: auto;
     width: 50%;
     padding: 10px;
+    line-height: 1.5;
 }
 
 h1{
