--- a/style/style.css
+++ b/style/style.css
@@ -6,16 +6,33 @@
 }
 
 .navbar{
-    color: #fff;
-    background-color: #069;
     display: flex;
+    justify-content: space-between;
     align-items: center;
-    height: 5vh;
+    background-color: #069;
+    color: #fff;
 }
 
 .title{
     font-size: 1.5rem;
-    margin: .5rem
+    margin: .5rem;
+}
+
+.links ul{
+    margin: 0;
+    padding: 0;
+    display: flex;
+}
+
+.links li{
+    list-style: none;
+}
+
+.links li a{
+    text-decoration: none;
+    color: #fff;
+    padding: 1rem;
+    display: block;
 }
 
 .text{
